--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,7 @@
     <h1>{{ .Title }}</h1>
     {{ .Content }}
   </div>
-  <div class="{{ cond (eq .Type "tags") "list-container-tags" "list-container" }}">
+  <div class="{{ cond (and (eq .Type "tags") (eq .Kind "taxonomy") ) "list-container-tags" "list-container" }}">
     {{ range .Pages }}
       {{ partial "preview.html" . }}
     {{ end }}
