--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,12 +1,33 @@
 {{ define "main" }}
-  <div class="blog-header-container">
-    <h1 class="blog-title">{{ .Title }}</h1>
+  <div class="flex flex-col justify-center items-center my-4">
+    <h1 class="text-2xl font-bold text-center">{{ .Title }}</h1>
 
     {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
     {{ $dateHuman := .Date | time.Format ":date_long" }}
-    <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
+    <time class="text-gray-600 dark:text-gray-500" datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
   </div>
 
-  {{ .Content }}
+  <div class="
+    md:flex-row md:gap-y-0 md:gap-x-4
+    flex flex-col-reverse gap-y-4 w-full
+  ">
+    <div class="md:w-3/5 w-full h-fit">
+      {{ .Content }}
+    </div>
+
+    {{ if index .Params "table_of_contents" }}
+      <div class="
+        md:w-2/5 md:sticky md:top-4
+        grid grid-flow-row w-full h-fit border rounded-xl border-solid border-gray-500 p-4 gap-y-1
+      ">
+        <label>Table of Contents</label>
+        <ol class="pl-10">
+          {{ range .Params.table_of_contents }}
+                <li class="list-item list-decimal"><a href="#{{ .section_id }}">{{ .section_name }}</a></li>
+          {{ end }}
+        </ol>
+      </div>
+    {{ end }}
+  </div>
 
 {{ end }}
