--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,11 +11,11 @@
     md:flex-row md:gap-y-0 md:gap-x-4
     flex flex-col-reverse gap-y-4 w-full
   ">
-    <div class="md:w-3/5 w-full h-fit">
-      {{ .Content }}
-    </div>
 
     {{ if index .Params "table_of_contents" }}
+      <div class="md:w-3/5 w-full h-fit">
+        {{ .Content }}
+      </div>
       <div class="
         md:w-2/5 md:sticky md:top-4
         grid grid-flow-row w-full h-fit border rounded-xl border-solid border-gray-500 p-4 gap-y-1
@@ -26,6 +26,10 @@
                 <li class="list-item list-decimal"><a href="#{{ .section_id }}">{{ .section_name }}</a></li>
           {{ end }}
         </ol>
+      </div>
+    {{ else }}
+      <div class="w-full h-fit">
+        {{ .Content }}
       </div>
     {{ end }}
   </div>
