--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -65,6 +65,14 @@
     [x-cloak] {
         @apply !hidden
     }
+
+    div.scrollable-code div.highlight {
+        @apply min-w-full w-fit
+    }
+
+    div.scrollable-code div.highlight pre {
+        @apply py-4 px-8
+    }
 }
 
 @layer components {
@@ -161,8 +169,12 @@
         @apply text-blue-500 hover:text-blue-700
     }
 
-    .highlight {
+    .highlight-text {
         @apply text-amber-600
+    }
+
+    .scrollable-code {
+        @apply overflow-auto w-full rounded-xl
     }
 }
 
