Fixed tags not properly linking, replace space with -

--- a/layouts/partials/previews/page.html
+++ b/layouts/partials/previews/page.html
@@ -23,7 +23,7 @@
 
     <div class="tag-container">
         {{ range .Params.tags }}
-        <span class="tag"><a href="/tags/{{.}}">{{ . }}</a></span>
+        <span class="tag"><a href="/tags/{{ replace . " " "-" }}">{{ . }}</a></span>
         {{ end }}
     </div>
 </div>
